--- a/Klike/Sources/Controllers/Event/KLPaymentPriceAmountView.xib
+++ b/Klike/Sources/Controllers/Event/KLPaymentPriceAmountView.xib
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="8191" systemVersion="15A279b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -12,6 +13,7 @@
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rZS-8P-OlZ">
                     <rect key="frame" x="130" y="8" width="19" height="21"/>
+                    <animations/>
                     <constraints>
                         <constraint firstAttribute="height" constant="21" id="6Vq-NR-Ggc"/>
                         <constraint firstAttribute="width" constant="19" id="Lrb-0H-sDY"/>
@@ -22,6 +24,7 @@
                 </label>
                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="1" placeholder="0" textAlignment="center" minimumFontSize="48" translatesAutoresizingMaskIntoConstraints="NO" id="aEo-Yi-uAZ">
                     <rect key="frame" x="145" y="3" width="31" height="45"/>
+                    <animations/>
                     <constraints>
                         <constraint firstAttribute="width" constant="31" id="lqn-tl-LBe"/>
                         <constraint firstAttribute="height" constant="45" id="q1U-y9-jY9"/>
@@ -39,7 +42,8 @@
                     </connections>
                 </textField>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="p64-nH-goS">
-                    <rect key="frame" x="144.5" y="53" width="31" height="30"/>
+                    <rect key="frame" x="145" y="53" width="31" height="30"/>
+                    <animations/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="edk-Pw-jRw"/>
@@ -47,6 +51,7 @@
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Xex-7o-Aat">
                     <rect key="frame" x="124" y="52" width="72" height="1"/>
+                    <animations/>
                     <color key="backgroundColor" red="0.08235294118" green="0.72941176470000002" blue="0.86666666670000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="1" id="eVq-ks-QrI"/>
@@ -55,6 +60,7 @@
                 </view>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QEb-oE-pH0">
                     <rect key="frame" x="84" y="53" width="153" height="21"/>
+                    <animations/>
                     <constraints>
                         <constraint firstAttribute="height" constant="21" id="DtM-4a-H5a"/>
                     </constraints>
@@ -63,6 +69,7 @@
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
+            <animations/>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="aEo-Yi-uAZ" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="3" id="0vb-d1-Rtw"/>
